# mmmg_tools

./: .f2py_f2cmap  README.md  pyproject.toml  setup.cfg  setup.py
examples/: adsorption.py  average_potential.py  bader.py  bader_masks.py  onsite_potential.py  set_vacuum.py
examples/notebooks/: DOS.ipynb
mmmg_tools/: io.py  objects.py  utils.py
src/mmmg_tools/: __init__.py  interfaces.py  io.py  objects.py  utils.py
src/pybader/: bader_mod.f90  charge_mod.f90  interface_mod.f90  kind_mod.f90  matrix_mod.f90  pybader.f90  pybader.pyf  weight_mod.f90
