[metadata]
name = mmmg_tools
version = 0.1.0
url = https://github.com/mmm-group
description = A collection of scripts and functions for working with VASP and cp2k
author = Adam Kerrigan
author_email = ak1014@york.ac.uk

[options]
package_dir = =src
packages = mmmg_tools

[options.package_data]
mmmg_tools = examples/*.py

[build]
build-temp = build/temp
