[metadata]
name = mmmg_tools
version = 0.1.0
url = https://github.com/mmm-group/mmmg_tools
description = A collection of scripts and functions for working with VASP and cp2k
author = Adam Kerrigan
author_email = ak1014@york.ac.uk
license = MIT license
license_file = LICENSE

[options]
package_dir = =src
packages = mmmg_tools
install_requires = 
    pymatgen
    tqdm 

[options.package_data]
mmmg_tools = 
    examples/*.py
    examples/*.ipynb

[options.extras_require]
notebooks =  bokeh; jupyterlab; tqdm

[build]
build-temp = build/temp
